<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Signal Tracker</string>
    <string name="title">Signal Tracker</string>
    <string name="welcome">Welcome to Signal Tracker!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="config">Configurations</string>
    <string name="quit">Exit</string>
    <string name="fb_appid">***REMOVED***</string>
    <string name="opencell_id">3496f1ea3dca07b9608e5aeb79bf52f6</string>
    <string name="fblogin">Facebook Login</string>
    <string name="fbmsg">Have facebook? \n\n Authorize SignalTracker and share your contributions with your friends!</string>
    <string name="notauthorized">Not authorized</string>
    <string name="continue_s">Continue</string>
    <string name="facebooklogo">Facebook Logo</string>
    <string name="stlogo">SignalTracker Logo</string>
    <string name="loading">Loading&#8230;</string>
    <string name="firstconfigmsg">That is your first configuration!\nYou have 4 options to configure SignalTracker:</string>
    <string name="firstconfig_lightmode">Energy is Life! In this mode the SignalTracker will only connect to the GPS in intervals with 30 minutes, saving your battery.</string>
    <string name="firstconfig_fullmode">Fullpower ahead! In this mode the SignalTracker will stay connected to the GPS and saving all the points. That can drain you battery!</string>
    <string name="firstconfig_offlinemode">ST, no internet for you! These modes works like Full/Light normal modes, but it doesn\'t use internet to download data, that will make necessary send manually the data to server.</string>
    <string name="firstconfig_choosemode">Choose one of the modes:</string>
    <string name="service_disabled">Service Disabled</string>
    <string name="lightmode">Light Mode</string>
    <string name="fullmode">Full Mode</string>
    <string name="lightmodeoff">Offline Light Mode</string>
    <string name="fullmodeoff">Offline Full Mode</string>
    <string name="offlinemode">Offline Mode</string>
    <string name="configdone">You finished the configuration!</string>
    <string name="startusing">Start use</string>
    <string name="seemapsignal">Coverage</string>
    <string name="lockedcontrol">Controls locked</string>
    <string name="unlockedcontrol">Controls unlocked</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="control">Control</string>
    <string name="o100percent">100%</string>
    <string name="seemap">See Coverage</string>
    <string name="mapnotice">That is the data that we already processed for your operator.</string>
    <string name="generalconfig">General Configuration</string>
    <string name="fbconfig">Facebook Configurations</string>
    <string name="servicemode">Service Modes</string>
    <string-array name="service_modes">
        <item>Light Mode</item>
        <item>Full Mode</item>
        <item>Offline Light Mode</item>
        <item>Offline Full Mode</item>
    </string-array>
    <string name="mindistance">Minimum Distance between points</string>
    <string name="meters100">100 m</string>
    <string name="mintime">Minimum Search Time</string>
    <string name="zeromiliseconds">0 ms</string>
    <string name="lightmodetime">Send Interval (LightMode)</string>
    <string name="minutes30">30 m</string>
    <string name="wifisend">Send signals only when connected on WiFi</string>
    <string name="connectedwith">Connected as:</string>
    <string name="notconnected">Not connected</string>
    <string name="savesettings">Save</string>
    <string name="cancel">Cancel</string>
    <string name="welcometext">Hello %s \n You authorized SignalTracker!</string>
    <string name="gpssatmsg">Connected via GPS -  %1$s/%2$s connected sattellites.</string>
    <string name="netsatmsg">Connected via Network - %1$s/%2$s connected sattellites.</string>
    <string name="stoppingst">Stopping SignalTracker</string>
    <string name="savingpref">Saving preferences</string>
    <string name="prefsavedrestarting">Preferences saved. Starting service.</string>
    <string name="disconnectefacebook">Disconnecte from facebook</string>
    <string name="willdisconnectonsave">Will be disconnected on save</string>
    <string name="stservicestopped">SignalTracker service stopped!</string>
    <string name="stservicestarted">SignalTracker service started!</string>
    <string name="barnotice">Points(%1$s km) Towers(%2$s) Sats(%3$s/%4$s)</string>
    <string name="notasktodo">No task to do..</string>
    <string name="gpsdisabled">GPS disabled, please enable it!</string>
    <string name="gpsenabled">GPS Enabled!</string>
    <string name="saveddata">Saved Data</string>
    <string name="signals">Signals</string>
    <string name="km1000">100.0 km</string>
    <string name="towers">Towers</string>
    <string name="tower100">100 towers</string>
    <string name="senddata">Send Data</string>
    <string name="extras">Extras</string>
    <string name="datasent">Data sent!</string>
    <string name="sending">Sending</string>
    <string name="lightmodemsg">The SignalTracker will run in lightmode.</string>
    <string name="downloadingops">Downloading operator list. This could take a while. Please wait.</string>
    <string name="updateoperatordata">Update Operator Data</string>
    <string name="downloadedoperator">%s operators downloaded!</string>
    <string name="downloading">Downloading</string>
</resources>
