<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grandient_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/main_exitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/quit" />

    <Button
        android:id="@+id/main_configbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_exitbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/config" />

    <Button
        android:id="@+id/main_stopbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_configbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/fbauthorized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_above="@+id/main_startbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/fbauthorized"
        android:contentDescription="@string/stlogo"
        android:scaleType="centerInside"
        android:src="@drawable/logo_400x400" />

    <Button
        android:id="@+id/main_startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_stopbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/start" />

</RelativeLayout>