<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grandient_bg" >

    <TextView
        android:id="@+id/runMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/signalBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/runMode"
        android:layout_toLeftOf="@+id/signalPercent"
        android:max="31" />

    <TextView
        android:id="@+id/collectedData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signalBar"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/connectionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/collectedData"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

  <fragment
      android:id="@+id/seemap"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/tileViewBtn"
      class="com.google.android.gms.maps.SupportMapFragment" />

  <TextView
      android:id="@+id/signalPercent"
      android:layout_width="50dp"
      android:layout_height="20dp"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/signalBar"
      android:gravity="center"
      android:text="@string/o100percent"
      android:textAppearance="?android:attr/textAppearanceSmall" />

  <ToggleButton
      android:id="@+id/tileViewBtn"
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/connectionInfo"
      android:layout_toRightOf="@+id/tv1"
      android:text="@string/seemapsignal"
      android:textOff="@string/disabled"
      android:textOn="@string/enabled"
      android:textSize="12sp" />

  <TextView
      android:id="@+id/tv1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/tileViewBtn"
      android:layout_alignParentLeft="true"
      android:layout_alignRight="@+id/runMode"
      android:layout_alignTop="@+id/tileViewBtn"
      android:gravity="center"
      android:text="@string/seemapsignal"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textSize="14sp" />

  <ToggleButton
      android:id="@+id/controlLockBtn"
      android:layout_width="wrap_content"
      android:layout_height="40dp"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:textOff="@string/lockedcontrol"
      android:textOn="@string/unlockedcontrol" />

</RelativeLayout>
