<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Spinner
        android:id="@+id/settings_serviceMode"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:entries="@array/service_modes"
        android:gravity="center"
        android:prompt="@string/servicemode" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/settings_serviceMode"
        android:gravity="center_vertical"
        android:text="@string/mindistance"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/settings_minDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/settings_minDistanceLabel"
        android:max="970"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/settings_minDistanceLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/settings_minDistance"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/settings_minDistance"
        android:gravity="center"
        android:text="@string/meters100"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/settings_t"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/settings_minDistance"
        android:gravity="center_vertical"
        android:text="@string/mintime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/settings_minTimeLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/settings_minTime"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/settings_minTime"
        android:gravity="center"
        android:text="@string/zeromiliseconds"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/settings_minTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settings_t"
        android:layout_toLeftOf="@+id/settings_minTimeLabel"
        android:max="3000"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/settings_minTimeLabel"
        android:gravity="center_vertical"
        android:text="@string/lightmodetime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/settings_lightmodeTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:layout_toLeftOf="@+id/settings_lightmodeTimeLabel"
        android:max="120"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/settings_lightmodeTimeLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_wifiSend"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/settings_lightmodeTime"
        android:gravity="center"
        android:text="@string/minutes30"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/settings_wifiSend"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/settings_lightmodeTime"
        android:layout_below="@+id/settings_lightmodeTime"
        android:text="@string/wifisend"
        android:textSize="16sp" />

</RelativeLayout>