<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/stlogo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_394x150" />

            <TextView
                android:id="@+id/runMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imageView1"
                android:gravity="center"
                android:text="@string/firstconfigmsg"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/runMode"
                android:gravity="center"
                android:text="@string/lightmode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_minDistanceLabel"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/firstconfig_lightmode"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/settings_minDistanceLabel"
                android:contentDescription="@string/lightmode"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_lock_idle_low_battery" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView3"
                android:gravity="center"
                android:text="@string/fullmode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/firstconfig_fullmode"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/textView5"
                android:contentDescription="@string/fullmode"
                android:src="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView5"
                android:gravity="center"
                android:text="@string/offlinemode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView6"
                android:text="@string/firstconfig_offlinemode"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/textView7"
                android:layout_below="@+id/textView6"
                android:layout_toLeftOf="@+id/textView5"
                android:contentDescription="@string/offlinemode"
                android:src="@android:drawable/ic_menu_sort_by_size" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView7"
                android:gravity="center"
                android:text="@string/firstconfig_choosemode"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/firstconfig_lightmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView8"
                android:text="@string/lightmode" />

            <Button
                android:id="@+id/firstconfig_fullmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/firstconfig_lightmode"
                android:text="@string/fullmode" />

            <Button
                android:id="@+id/firstconfig_lightoffline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/firstconfig_fullmode"
                android:text="@string/lightmodeoff" />

            <Button
                android:id="@+id/firstconfig_fulloffline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/firstconfig_lightoffline"
                android:text="@string/fullmodeoff" />

        </RelativeLayout>
